--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
@@ -13,6 +13,7 @@
         <vm:PreferencesWindow_VM/>
     </Window.DataContext>
     <StackPanel Orientation="Vertical" Margin="20">
+        <!--select VS folder-->
         <StackPanel Orientation="Horizontal">
             <Label HorizontalAlignment="Stretch" VerticalAlignment="Center">Select VS Folder</Label>
             <Button Click="SelectVSLocation_Click" >
@@ -41,6 +42,7 @@
             <TextBox Grid.Row="1" Grid.Column="2" Background="Black" Foreground="White" Text="{Binding MSBuildLocation}" IsReadOnly="True"></TextBox>
 
         </Grid>
+        <!--Select temp folder -->
         <StackPanel Orientation="Horizontal">
             <Label HorizontalAlignment="Stretch" VerticalAlignment="Center">Select Temp Folder</Label>
             <Button Click="SelectTempFolder_Click" >
@@ -59,6 +61,25 @@
 
             <Label Grid.Row="2"  Grid.Column="1" ToolTip="The folder where the submissions will be temporarily copied to" Foreground="{StaticResource TextBrush}">Temp Folder</Label>
             <TextBox Grid.Row="2" Grid.Column="2" Background="Black"  Text="{Binding TempFolderPath}" IsReadOnly="True" Foreground="{StaticResource TextBrush}"></TextBox>
+            <Rectangle Grid.Row="0" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+            <Rectangle Grid.Row="0" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+        </Grid>
+        <!--Settings-->
+        <StackPanel Orientation="Horizontal">
+            <Label HorizontalAlignment="Stretch" VerticalAlignment="Center">Settings</Label>
+        </StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="2"  Grid.Column="1" ToolTip="This folder name should be the same between all submissions. The 'keep open' functionality only works on files relative to this folder." Foreground="{StaticResource TextBrush}">Project root folder name</Label>
+            <TextBox Grid.Row="2" Grid.Column="2" Background="Black"  Text="{Binding ProjectRootFolderName}" IsReadOnly="False" Foreground="{StaticResource TextBrush}"></TextBox>
             <Rectangle Grid.Row="0" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
             <Rectangle Grid.Row="0" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
         </Grid>
