--- a/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/App.xaml
@@ -87,7 +87,7 @@
                 </Setter>
             </Style>
             <Style x:Key="{x:Type Label}" TargetType="{x:Type Label}">
-                
+
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Label}">
@@ -170,7 +170,123 @@
                 </Style.Triggers>
             </Style>
 
-            
+            <!--Checkbox-->
+            <Style TargetType="{x:Type CheckBox}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type CheckBox}">
+                            <Grid x:Name="templateRoot"
+                  Background="Transparent"
+                  SnapsToDevicePixels="True">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Border x:Name="checkBoxBorder"
+                       Margin="1"
+                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                       Background="{TemplateBinding Background}"
+                       BorderBrush="{TemplateBinding BorderBrush}"
+                       BorderThickness="{TemplateBinding BorderThickness}">
+                                    <Grid x:Name="markGrid">
+                                        <Path x:Name="optionMark"
+                           Margin="1"
+                           Data="F1 M 9.97498,1.22334L 4.6983,9.09834L 4.52164,9.09834L 0,5.19331L 1.27664,3.52165L 4.255,6.08833L 8.33331,1.52588e-005L 9.97498,1.22334 Z "
+                           Fill="{StaticResource CustomWhite}"
+                           Opacity="0"
+                           Stretch="None" />
+                                        <Rectangle x:Name="indeterminateMark"
+                                Margin="2"
+                                Fill="{StaticResource CustomWhite}"
+                                Opacity="0" />
+                                    </Grid>
+                                </Border>
+                                <ContentPresenter x:Name="contentPresenter"
+                                 Grid.Column="1"
+                                 Margin="{TemplateBinding Padding}"
+                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                 Focusable="False"
+                                 RecognizesAccessKey="True"
+                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="HasContent"
+                        Value="true">
+
+                                    <Setter Property="Padding"
+                          Value="4,-1,0,0" />
+                                </Trigger>
+                                <Trigger Property="IsMouseOver"
+                        Value="true">
+                                    <Setter TargetName="checkBoxBorder"
+                                      Property="Background"
+                                       Value="{StaticResource CustomWhite}"/>
+                                    <Setter TargetName="checkBoxBorder"
+                                          Property="BorderBrush"
+                                          Value="{StaticResource CustomWhite}" />
+                                    <Setter TargetName="optionMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomWhite}" />
+                                    <Setter TargetName="indeterminateMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomWhite}" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled"
+                                        Value="false">
+                                    <Setter TargetName="checkBoxBorder"
+                                          Property="Background"
+                                          Value="{StaticResource CustomWhite}" />
+                                    <Setter TargetName="checkBoxBorder"
+                                          Property="BorderBrush"
+                                          Value="{StaticResource CustomLightGrey}" />
+                                    <Setter TargetName="optionMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomLightGrey}" />
+                                    <Setter TargetName="indeterminateMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomLightGrey}" />
+                                </Trigger>
+                                <Trigger Property="IsPressed"
+                                        Value="true">
+                                    <Setter TargetName="checkBoxBorder"
+                                          Property="Background"
+                                          Value="{StaticResource CustomMediumGray}" />
+                                    <Setter TargetName="checkBoxBorder"
+                                          Property="BorderBrush"
+                                          Value="{StaticResource CustomMediumGray}" />
+                                    <Setter TargetName="optionMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomMediumGray}" />
+                                    <Setter TargetName="indeterminateMark"
+                                          Property="Fill"
+                                          Value="{StaticResource CustomMediumGray}" />
+                                </Trigger>
+                                <Trigger Property="IsChecked"
+                                        Value="true">
+                                    <Setter TargetName="optionMark"
+                                          Property="Opacity"
+                                          Value="1" />
+                                    <Setter TargetName="indeterminateMark"
+                                          Property="Opacity"
+                                          Value="0" />
+                                </Trigger>
+                                <Trigger Property="IsChecked"
+                                        Value="{x:Null}">
+                                    <Setter TargetName="optionMark"
+                                          Property="Opacity"
+                                          Value="0" />
+                                    <Setter TargetName="indeterminateMark"
+                                          Property="Opacity"
+                                          Value="1" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
 
             <ControlTemplate x:Key="ScrollViewerHorizontalOnTopTemplate" TargetType="{x:Type ScrollViewer}">
                 <Grid x:Name="Grid" Background="{TemplateBinding Background}">
@@ -417,10 +533,10 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            
+
             <!--TabControl-->
-            
-           
+
+
             <Style TargetType="{x:Type TabItem}">
                 <!--Foreground="{StaticResource TextBrush}" Header="Build output" Background="{StaticResource HeaderBackgroundBrush}" Cursor="Hand" FontFamily="Consolas"-->
                 <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
@@ -564,7 +680,7 @@
                 </Style.Triggers>
             </Style>
 
-            
+
             <ControlTemplate x:Key="MenuItemTemplate" TargetType="{x:Type MenuItem}">
                 <Border x:Name="templateRoot" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                     <Grid Margin="-1">
