--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
@@ -76,12 +76,18 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="2"  Grid.Column="1" ToolTip="This folder name should be the same between all submissions. The 'keep open' functionality only works on files relative to this folder." Foreground="{StaticResource TextBrush}">Project root folder name</Label>
-            <TextBox Grid.Row="2" Grid.Column="2" Background="Black"  Text="{Binding ProjectRootFolderName}" IsReadOnly="False" Foreground="{StaticResource TextBrush}"></TextBox>
+            <Label Grid.Row="0"  Grid.Column="1" ToolTip="This folder name should be the same between all submissions. The 'keep open' functionality only works on files relative to this folder." Foreground="{StaticResource TextBrush}">Project root folder name</Label>
+            <TextBox Grid.Row="0" Grid.Column="2" Background="Black"  Text="{Binding ProjectRootFolderName}" IsReadOnly="False" Foreground="{StaticResource TextBrush}"></TextBox>
             <Rectangle Grid.Row="0" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
             <Rectangle Grid.Row="0" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+            <!--Keep Submissions-->
+            <Label Grid.Row="1"  Grid.Column="1" ToolTip="Checking this box will stop the submissions from being deleted automatically when a new submission gets opened" Foreground="{StaticResource TextBrush}">Keep submissions</Label>
+            <CheckBox Grid.Row="1" Grid.Column="2" Background="Black"  IsChecked="{Binding KeepSubmissions}"></CheckBox>
+            <Rectangle Grid.Row="1" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+            <Rectangle Grid.Row="1" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
         </Grid>
     </StackPanel>
 </Window>
