--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
@@ -77,6 +77,9 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <Label Grid.Row="0"  Grid.Column="1" ToolTip="This folder name should be the same between all submissions. The 'keep open' functionality only works on files relative to this folder." Foreground="{StaticResource TextBrush}">Project root folder name</Label>
@@ -88,6 +91,11 @@
             <CheckBox Grid.Row="1" Grid.Column="2" Background="Black"  IsChecked="{Binding KeepSubmissions}"></CheckBox>
             <Rectangle Grid.Row="1" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
             <Rectangle Grid.Row="1" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+
+            <Label Grid.Row="2"  Grid.Column="1" ToolTip="Params to be added to the MSBuild task" Foreground="{StaticResource TextBrush}">Build Params</Label>
+            <TextBox Grid.Row="2" Grid.Column="2" Background="Black"  Text="{Binding BuildParams}" IsReadOnly="False" Foreground="{StaticResource TextBrush}"></TextBox>
+            <Rectangle Grid.Row="2" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+            <Rectangle Grid.Row="2" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
         </Grid>
     </StackPanel>
 </Window>
