--- a/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/Windows/PreferencesWindow.xaml
@@ -97,5 +97,27 @@
             <Rectangle Grid.Row="2" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
             <Rectangle Grid.Row="2" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
         </Grid>
+        <!--Select Unity Installation -->
+        <StackPanel Orientation="Horizontal">
+            <Label HorizontalAlignment="Stretch" VerticalAlignment="Center">Select Unity Installation Folder</Label>
+            <Button Click="SelectUnityInstallation_Click" >
+                <icons:PackIconMaterial Kind="FolderEdit"/>
+            </Button>
+        </StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="2"  Grid.Column="1" ToolTip="The Unity Installation to use" Foreground="{StaticResource TextBrush}">Unity Path</Label>
+            <TextBox Grid.Row="2" Grid.Column="2" Background="Black"  Text="{Binding UnityInstallation}" IsReadOnly="True" Foreground="{StaticResource TextBrush}"></TextBox>
+            <Rectangle Grid.Row="0" Width="1" Height="10" Margin="10 0 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+            <Rectangle Grid.Row="0" Width="10" Height="1" Margin="19 10 0 0" Fill="{StaticResource TextBrush}"></Rectangle>
+        </Grid>
     </StackPanel>
 </Window>
